[gd_scene load_steps=3 format=2]

[ext_resource path="res://Source/HUD/HUD.gd" type="Script" id=1]
[ext_resource path="res://Assets/Themes/Main/theme.tres" type="Theme" id=2]

[node name="CanvasLayer" type="CanvasLayer"]

[node name="HUD" type="Control" parent="."]
margin_right = 1280.0
margin_bottom = 720.0
mouse_filter = 2
script = ExtResource( 1 )

[node name="GameModeLabel" type="Label" parent="HUD"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -300.0
margin_top = -100.0
theme = ExtResource( 2 )
text = "Mode: PvP"
align = 1
valign = 1

[node name="GameLevelLabel" type="Label" parent="HUD"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -100.0
margin_right = 300.0
theme = ExtResource( 2 )
text = "Level: Hard"
align = 1
valign = 1

[node name="PlayerOneScoreLabel" type="Label" parent="HUD"]
visible = false
margin_right = 300.0
margin_bottom = 100.0
theme = ExtResource( 2 )
text = "Player One Score: 0"
align = 1
valign = 1
autowrap = true
clip_text = true

[node name="PlayerTwoScoreLabel" type="Label" parent="HUD"]
visible = false
anchor_left = 1.0
anchor_right = 1.0
margin_left = -300.0
margin_bottom = 100.0
theme = ExtResource( 2 )
text = "Player Two Score: 0"
align = 1
valign = 1
autowrap = true
clip_text = true

[node name="WinnerLabel" type="Label" parent="HUD"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -150.0
margin_top = -50.0
margin_right = 150.0
margin_bottom = 50.0
theme = ExtResource( 2 )
text = "X WON!"
align = 1
valign = 1
